objects/Calibration_Event__c.object
<CustomObject>
    <description>Child object of Installed Product to track the individual calibration events for a particular calibrated tool.</description>
    <label>Calibration Event</label>
    <nameField>
        <displayFormat>CE-{00000000}</displayFormat>
        <label>Calibration Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calibration Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Reason__c</fullName>
        <description>Reason for making the changes</description>
        <inlineHelpText>Reason for making the changes</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Correction</fullName>
                </value>
                <value>
                    <fullName>Calibration Date Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calibrated_Tool__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Calibrated Tool</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SVMXC__Installed_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Calibrated Tools</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Calibration Events</relationshipLabel>
        <relationshipName>Calibration_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calibrated_by__c</fullName>
        <label>Calibrated by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACR Technical Services, Inc.</fullName>
                </value>
                <value>
                    <fullName>Agilent</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Anton Paar</fullName>
                </value>
                <value>
                    <fullName>Arizona Instrument, LLC</fullName>
                </value>
                <value>
                    <fullName>ATS Analytics</fullName>
                </value>
                <value>
                    <fullName>California Integration Coordinators, Inc.</fullName>
                </value>
                <value>
                    <fullName>Control Company</fullName>
                </value>
                <value>
                    <fullName>Davis Calibration</fullName>
                </value>
                <value>
                    <fullName>Dick Munns Company</fullName>
                </value>
                <value>
                    <fullName>Distek</fullName>
                </value>
                <value>
                    <fullName>Essco Calibration Lab</fullName>
                </value>
                <value>
                    <fullName>ETS-Lindgren</fullName>
                </value>
                <value>
                    <fullName>Extech Instruments</fullName>
                </value>
                <value>
                    <fullName>FLIR</fullName>
                </value>
                <value>
                    <fullName>Fluke</fullName>
                </value>
                <value>
                    <fullName>GJC Instruments Ltd.</fullName>
                </value>
                <value>
                    <fullName>HACH</fullName>
                </value>
                <value>
                    <fullName>International Process Solutions</fullName>
                </value>
                <value>
                    <fullName>LabMetrix</fullName>
                </value>
                <value>
                    <fullName>Llantrisant</fullName>
                </value>
                <value>
                    <fullName>Ludlum Measurements, Inc.</fullName>
                </value>
                <value>
                    <fullName>Mettler Toledo</fullName>
                </value>
                <value>
                    <fullName>Millipore Corp.</fullName>
                </value>
                <value>
                    <fullName>MONARCH</fullName>
                </value>
                <value>
                    <fullName>National Standards of Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>NIST</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>PerkinElmer</fullName>
                </value>
                <value>
                    <fullName>Precision Measurements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_As_Left_Result__c</fullName>
        <label>As Left Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_As_Found_Status__c</fullName>
        <label>As Found Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Calibration_Period__c</fullName>
        <formula>TEXT(Calibrated_Tool__r.SMAX_PS_MTE_Calibration_Period__c)</formula>
        <label>Calibration Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Deviation_Report_ID__c</fullName>
        <description>Report ID from SAP</description>
        <inlineHelpText>Deviation Report ID from SAP.</inlineHelpText>
        <label>Deviation Report ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calibration_Completed__c</fullName>
        <label>Calibration Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Has_MTE_Permission_Set__c</fullName>
        <description>Denotes that the running user has the MTE Permission Set Applied</description>
        <formula>$Permission.SMAX_PS_HasMTEPermission</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes that the running user has the MTE Permission Set Applied</inlineHelpText>
        <label>Has MTE Permission Set?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>